# dj-rest-kit

./: README.md  pyproject.toml  requirements.txt
src/: filters.py  helper.py  mixins.py  pagination.py  renderer.py  serializers.py  setup.py  views.py  viewset.py
src/dj-rest-kit/: serializers.py
src/dj_rest_kit/: admin.py  constants.py  filters.py  helper.py  middleware.py  models.py  serializers.py  validators.py  views.py
